OldTrackableClosure 처리 버그 수정. sh exec_test.sh runtime/Safepoint/TestAbortOnVMOperationTimeout